--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -148,7 +148,7 @@
     <section class="py-5">
         <div class="container px-5 custom-article">
             <h1 class="fw-bolder mb-4"><span class="gradient-title">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</span></h1>
-            <span class="subtag">Reseña</span>
+            <span class="small text-muted d-inline-block subtag">Reseña</span>
             <img src="assets/portadaarte.jpg" alt="Portada de la exposición" class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
             <p class="lead fw-bold fst-italic">
                 Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”. A través de obras de grandes artistas como Pablo Picasso, Salvador Dalí o Charles Le Corbusier, la muestra invita a reflexionar sobre cómo la naturaleza ha inspirado a los artistas a lo largo de un siglo.
