--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/salomon.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/salomon.html
@@ -197,6 +197,7 @@
         <div class="container px-5 custom-article">
             <h1 class="fw-bolder mb-4"><span class="gradient-title">La abnegación más pura: maternidad</span></h1>
             <h2 class="fw-bold mb-3">El juicio de Salomón por Luca Giordano</h2>
+            <span class="small d-inline-block subtag">Reseña</span>
             <img src="assets/portada-salo.jpg" alt="El juicio de Salomón por Luca Giordano. Arte barroco italiano. Imagen 1." class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
             <p class="lead fw-bold fst-italic">
                 Es difícil recorrer los pasillos del Thyssen sin detenerse a ver esta dramática escena, que, marcada por una iluminación barroca, narra uno de los más citados episodios bíblicos. La pintura recoge el momento principal de El juicio de Salomón.
