--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -232,18 +232,18 @@
                                 <div class="row align-items-center gx-5">
                                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
-                                            <div class="text-secondary fw-bolder mb-2">2011 - 2015</div>
+                                            <div class="text-secondary fw-bolder mb-2">2017 - 2019</div>
                                             <div class="mb-2">
-                                                <div class="small fw-bolder">ULA</div>
-                                                <div class="small text-muted">Los Angeles, CA</div>
+                                                <div class="small fw-bolder">I. E. Pablo Sexto</div>
+                                                <div class="small text-muted">Dosquebradas, CO</div>
                                             </div>
                                             <div class="fst-italic">
-                                                <div class="small text-muted">Undergraduate</div>
-                                                <div class="small text-muted">Computer Science</div>
+                                                <div class="small text-muted">Bachiller y técnico</div>
+                                                <div class="small text-muted">Bachiller académico y técnico en electrónica</div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                    <div class="col-lg-8"><div>A la vez que cursaba mi bachillerato por las mañanas, veía clases por las tardes de técnico en electrónica. De esta forma, pude graduarme de ambos simultáneamente.</div></div>
                                 </div>
                             </div>
                         </div>
@@ -263,31 +263,37 @@
                                 </div>
 
                                 <!-- Grupo 1: Comunicación y pensamiento -->
-                                <h5 class="fw-bold mt-4">🧩 Comunicación y pensamiento</h5>
+                                <h5 class="fw-bold mt-4">Comunicación y pensamiento</h5>
                                 <ul class="list-unstyled row row-cols-1 row-cols-md-2 g-3">
                                     <li class="col"><div class="skill-card">Pensamiento crítico</div></li>
                                     <li class="col"><div class="skill-card">Redacción periodística</div></li>
                                     <li class="col"><div class="skill-card">Narrativa analítica</div></li>
                                     <li class="col"><div class="skill-card">Creatividad discursiva</div></li>
                                     <li class="col"><div class="skill-card">Comunicación interpersonal</div></li>
+                                    <li class="col"><div class="skill-card">Comunicación empática</div></li>
                                 </ul>
 
                                 <!-- Grupo 2: Entorno digital -->
-                                <h5 class="fw-bold mt-4">💻 Entorno digital y herramientas</h5>
+                                <h5 class="fw-bold mt-4">Entorno digital y herramientas</h5>
                                 <ul class="list-unstyled row row-cols-1 row-cols-md-2 g-3">
                                     <li class="col"><div class="skill-card">Adaptabilidad digital</div></li>
                                     <li class="col"><div class="skill-card">Alfabetización mediática</div></li>
                                     <li class="col"><div class="skill-card">Manejo básico de HTML y CSS</div></li>
                                     <li class="col"><div class="skill-card">Optimización de contenidos (SEO)</div></li>
+                                    <li class="col"><div class="skill-card"><strong>Grado medio en electrónica</strong></div></li>
                                 </ul>
 
                                 <!-- Grupo 3: Formación y sensibilidad -->
-                                <h5 class="fw-bold mt-4">🌱 Formación y sensibilidad</h5>
+                                <h5 class="fw-bold mt-4">Formación y sensibilidad</h5>
                                 <ul class="list-unstyled row row-cols-1 row-cols-md-2 g-3">
-                                    <li class="col"><div class="skill-card">Curso de nutrición y salud</div></li>
-                                    <li class="col"><div class="skill-card">Curso de arte y estética visual</div></li>
+                                    <li class="col"><div class="skill-card">Curso corto de nutricionismo</div></li>
+                                    <li class="col"><div class="skill-card">Curso de historia del arte</div></li>
                                     <li class="col"><div class="skill-card">Atención al detalle (hostelería)</div></li>
                                     <li class="col"><div class="skill-card">Gestión de tiempo bajo presión</div></li>
+                                    <li class="col"><div class="skill-card">Autodidacta en varios ámbitos tecnológicos</div></li>
+                                    <li class="col"><div class="skill-card">Contabilidad básica</div></li>
+                                    <li class="col"><div class="skill-card">Administración y gestión de empresas</div></li>
+                                    <li class="col"><div class="skill-card">Amplio conocimiento en geografía</div></li>
                                 </ul>
                             </div>
                         </div>
