--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -303,8 +303,8 @@
                             <p class="lead fw-light mb-4">Mi nombre es Rick Grisales, soy periodista y creativo.</p>
                             <p class="text-muted">Me apasiona el poder de las palabras para conectar, inspirar y transformar. Como periodista, busco historias que importen; como creativo, exploro formas de contarlas que dejen huella. Actualmente, estoy estudiando Periodismo en la Universidad Complutense de Madrid y trabajando en proyectos que fusionan narrativa, cultura y sensibilidad humana.</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
-                                <a class="text-gradient" href="https://www.instagram.com/rickgrisales"><i class="bi bi-instagram"></i></a>
-                                <a class="text-gradient" href="https://www.linkedin.com/in/rick-grisales-0a2b3a2a5"><i class="bi bi-linkedin"></i></a>
+                                <a class="text-gradient" href="https://www.instagram.com/oranrick"><i class="bi bi-instagram"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/ricardo-grisales-ramirez-49a322232/"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
