--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -155,16 +155,19 @@
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-11 col-xl-9 col-xxl-8">
+                   <!-- About Me Section -->
+<section>
+    <h2 class="text-primary fw-bolder mb-4">Un poco sobre mí :)</h2>
+    <div class="card shadow border-0 rounded-4 mb-5">
+        <div class="card-body p-5">
+            <div>Nací en España, pero crecí en Colombia, donde aprendí a mirar el mundo con ojos curiosos y, donde la sensibilidad y la resiliencia se convirtieron en mis mayores acompañantes vitales. Desde muy joven encontré en el lenguaje una forma de entender la realidad y, sobre todo, de transformarla, son mis matemáticas. Por eso escribo: para pensar, para cuestionar y, a veces, para crear un poco de belleza. Me apasiona la relación entre cultura, sociedad y lenguaje, y he orientado mi formación y experiencia hacia el periodismo, la escritura crítica y la comunicación con conciencia, colectiva y, sobre todo, empática. Vivo solo desde hace años, lo que me ha enseñado a ser responsable, independiente y a cultivar la introspección como una herramienta de creación y automejora. Amo las metáforas porque permiten decir lo que no siempre se puede explicar, o explicar aquello que solo se entiende desde lo poético. Creo en el poder de las palabras para conectar, sanar y también para hacer pensar. Por eso, cada proyecto que emprendo —ya sea académico, periodístico o creativo— nace de una pregunta, de mi neurodivergencia, y busca, <strong>siempre</strong> aportar hacia un crecimiento comunitario.</div>
+        </div>
+    </div>
+</section>
                     <!-- Experience Section-->
                     <section>
                         <div class="d-flex align-items-center justify-content-between mb-4">
                             <h2 class="text-primary fw-bolder mb-0">Experiencia</h2>
-                            <!-- Download resume button-->
-                            <!-- Note: Set the link href target to a PDF file within your project-->
-                            <a class="btn btn-primary px-4 py-3" href="#!">
-                                <div class="d-inline-block bi bi-download me-2"></div>
-                                Descargar CV
-                            </a>
                         </div>
                         <!-- Experience Card 1-->
                         <div class="card shadow border-0 rounded-4 mb-5">
@@ -172,7 +175,7 @@
                                 <div class="row align-items-center gx-5">
                                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
-                                            <div class="text-primary fw-bolder mb-2">¡Sin experiencia en el sector de la comunicación!</div>
+                                            <div class="text-primary fw-bolder mb-2">¡Abierto a nuevas experiencias!</div>
                                             <div class="small fw-bolder">
                                             </div>
                                         </div>
@@ -202,7 +205,7 @@
                     </section>
                     <!-- Education Section-->
                     <section>
-                        <h2 class="text-secondary fw-bolder mb-4">Educación</h2>
+                        <h2 class="text-secondary fw-bolder mb-4">Formación</h2>
                         <!-- Education Card 1-->
                         <div class="card shadow border-0 rounded-4 mb-5">
                             <div class="card-body p-5">
