--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -317,8 +317,7 @@
                 </div>
             </div>
         </section>
-        <!-- Sección de Proyectos destacados con animación -->
-        <!-- Proyectos en carrusel Swiper -->
+<!-- Sección de Proyectos destacados con animación -->
 <section class="py-5 bg-light">
   <div class="container px-5">
     <div class="text-center mb-5" data-aos="fade-up">
@@ -327,14 +326,15 @@
 
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-
         <!-- Proyecto 1 -->
         <div class="swiper-slide">
-          <div class="card">
-            <img src="assets/portadaarte.jpg" class="card-img-top" alt="Arte y naturaleza">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">Arte y naturaleza</h5>
-              <p class="card-text">Diálogo entre surrealismo y crisis ecológica. Un paseo por la biomorfología del siglo XX.</p>
+          <div class="project-card">
+            <div class="project-image">
+              <img src="assets/portadaarte.jpg" alt="Arte y naturaleza">
+            </div>
+            <div class="project-content">
+              <h5 class="project-title fw-bold">Arte y naturaleza</h5>
+              <p class="project-text">Diálogo entre surrealismo y crisis ecológica. Un paseo por la biomorfología del siglo XX.</p>
               <a href="arte-naturaleza.html" class="btn btn-warning text-white fw-bold">Leer más</a>
             </div>
           </div>
@@ -342,11 +342,13 @@
 
         <!-- Proyecto 2 -->
         <div class="swiper-slide">
-          <div class="card">
-            <img src="assets/trump.jpg" class="card-img-top" alt="La política del engaño">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">La política del engaño</h5>
-              <p class="card-text">La desinformación como estrategia emocional en la política moderna.</p>
+          <div class="project-card">
+            <div class="project-image">
+              <img src="assets/trump.jpg" alt="La política del engaño">
+            </div>
+            <div class="project-content">
+              <h5 class="project-title fw-bold">La política del engaño</h5>
+              <p class="project-text">La desinformación como estrategia emocional en la política moderna.</p>
               <a href="poder-mentira.html" class="btn btn-warning text-white fw-bold">Leer más</a>
             </div>
           </div>
@@ -354,16 +356,17 @@
 
         <!-- Proyecto 3 -->
         <div class="swiper-slide">
-          <div class="card">
-            <img src="assets/portada-salo.jpg" class="card-img-top" alt="La maternidad en el arte">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">La maternidad en el arte</h5>
-              <p class="card-text">Interpretación crítica del juicio de Salomón desde lo humano y lo ético.</p>
+          <div class="project-card">
+            <div class="project-image">
+              <img src="assets/portada-salo.jpg" alt="La maternidad en el arte">
+            </div>
+            <div class="project-content">
+              <h5 class="project-title fw-bold">La maternidad en el arte</h5>
+              <p class="project-text">Interpretación crítica del juicio de Salomón desde lo humano y lo ético.</p>
               <a href="salomon.html" class="btn btn-warning text-white fw-bold">Leer más</a>
             </div>
           </div>
         </div>
-
       </div>
 
       <!-- Flechas -->
